--- a/.jshintrc
+++ b/.jshintrc
@@ -3,21 +3,22 @@
 //jslint plusplus: true
 
 {
-	"globals": {
+  "globals": {
     "SURVEYOR": true,
-		"START_TIME": true,
-		"DIR": true,
-		"NUM_SCENES": true,
-		"viewport": true,
-		"updateVisible": true,
-		"zeroFill": true,
-		"clamp": true,
-		"displayDialog": true,
-		"restoreDialog": true,
-		"setOverlay": true,
-		"putChoice": true
-	},
+    "START_TIME": true,
+    "DIR": true,
+    "NUM_SCENES": true,
+    "viewport": true,
+    "updateVisible": true,
+    "zeroFill": true,
+    "clamp": true,
+    "displayDialog": true,
+    "restoreDialog": true,
+    "setOverlay": true,
+    "putChoice": true
+  },
   "latedef": "nofunct",
+  "unused": true,
   "jquery": true,
   "browser": true,
   "devel": true,
